visionai/ingress/visionai-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visionai-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /visionai
            pathType: Prefix
            backend:
              service:
                name: visionai-frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: visionai-backend-service
                port:
                  number: 5000
